layout issues

--- a/screen.css
+++ b/screen.css
@@ -11,6 +11,21 @@ body {
  h1{
     text-align: center;
 }
+h2{
+    position: relative;
+    text-align: center;
+    margin: 0,10px,0,0;
+    padding-top: 0;
+    width: 100px;
+}
+h3{
+    text-align: center;
+}
+.braceronarratives{
+    text-align: center;
+    top: 50px;
+}
+
 section{
     
 }
